--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "math-magicians-2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/maenkhraisha/math-magicians-2",
+  "homepage": "https://maenkhraisha.github.io/math-magicians-2",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
